@@ -40,7 +40,9 @@ public class NoIncludeTag implements ParserTag {
 			// no content is returned when called from a template
 			return "";
 		}
-		// anything else then strip tags and return
-		return ParserUtil.tagContent(raw);
+		String content = ParserUtil.tagContent(raw);
+		// run the pre-processor against the noinclude content
+		JFlexParser parser = new JFlexParser(parserInput);
+		return parser.parseFragment(parserOutput, content, JFlexParser.MODE_PREPROCESS);
 	}
 }
